--- a/shedule/package.json
+++ b/shedule/package.json
@@ -24,11 +24,13 @@
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.3.1",
     "@types/schedule": "^0.5.3",
+    "@userfront/react": "^2.0.0",
     "@vitejs/plugin-react": "^4.3.3",
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
+    "react-router-dom": "^6.28.0",
     "schedule": "^0.5.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
