--- a/shedule/package.json
+++ b/shedule/package.json
@@ -12,28 +12,28 @@
   "dependencies": {
     "@syncfusion/ej2-react-calendars": "^27.2.2",
     "@syncfusion/ej2-react-dropdowns": "^27.2.2",
-    "react": "^18.3.1",
-    "react-beautiful-dnd": "^13.1.1",
-    "react-dom": "^18.3.1"
+    "react-beautiful-dnd": "^13.1.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
     "@hello-pangea/dnd": "^17.0.0",
     "@syncfusion/ej2-react-schedule": "^27.2.2",
-    "@types/react": "^18.3.12",
+    "@types/react": "^18.3.22",
     "@types/react-beautiful-dnd": "^13.1.8",
-    "@types/react-dom": "^18.3.1",
+    "@types/react-dom": "^18.3.7",
     "@types/schedule": "^0.5.3",
     "@userfront/react": "^2.0.0",
-    "@vitejs/plugin-react": "^4.3.3",
+    "@vitejs/plugin-react": "^4.4.1",
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
     "react-router-dom": "^6.28.0",
     "schedule": "^0.5.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
-    "vite": "^5.4.10"
+    "vite": "^5.4.19"
   }
 }
