vite fix for building app

--- a/shedule/package.json
+++ b/shedule/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vite build --mode production --outDir public",
+    "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview"
   },
@@ -37,6 +37,6 @@
     "schedule": "^0.5.0",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.11.0",
-    "vite": "^2.9.16"
+    "vite": "^5.4.19"
   }
 }
