--- a/shedule/package.json
+++ b/shedule/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "engines": {
-    "node": ">=18.0.0"
+    "node": "12.22"
   },
   "scripts": {
     "dev": "vite",
@@ -15,6 +15,8 @@
   "dependencies": {
     "@syncfusion/ej2-react-calendars": "^27.2.2",
     "@syncfusion/ej2-react-dropdowns": "^27.2.2",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-beautiful-dnd": "^13.1.1"
   },
   "devDependencies": {
@@ -25,18 +27,17 @@
     "@types/react-beautiful-dnd": "^13.1.8",
     "@types/react-dom": "^18.3.7",
     "@types/schedule": "^0.5.3",
-    "@userfront/react": "^2.0.0",
-    "@vitejs/plugin-react": "^4.4.1",
+    "@vitejs/plugin-react": "^1.3.2",
     "eslint": "^9.13.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-router-dom": "^6.28.0",
     "schedule": "^0.5.0",
-    "typescript": "~5.6.2",
+    "typescript": "~4.9.0",
     "typescript-eslint": "^8.11.0",
-    "vite": "^5.4.19"
+    "vite": "^2.9.0"
   }
 }
